# ldmg

./: Config.py  DashApp.py  Forms.py  Graph.py  SMApp.py  Styling.py  TGbot.py  TableLoader.py  Test.py  Transition.py  Types.py  dotenv  main.py  requirements.txt
Backend/: API.py  Assembly.py  Exceptions.py  Form.py  FormElems.py  State.py  StateBranches.py  StateHistory.py  StateMachine.py  Types.py  __init__.py
Backend/APIs/: Messages.py  MonoAPI.py
Backend/Factories/: APIFactory.py  ActiveUsersFactory.py  Assembly.py  FormElemFactory.py  FormFactory.py  StateFactory.py  StorageFactory.py  __init__.py
Backend/Interface/: FormElem.py
Backend/Storage/: ActiveUsers.py  Context.py  Models.py  Storage.py  StorageInterface.py  __init__.py
DashApp/: Graph.py  Styling.py  Types.py  __init__.py
DashApp/elements/: __init__.py  elements.py
Docgen/: Docgen.py
Docgen/templates/: suit_mobil.docx  suit_single_day.docx
Graph/: Config.py  Doc.py  Exceptions.py  Form.py  Graph.py  Loader.py  Models.py  State.py  Styling.py  TableLoader.py  Transition.py  __init__.py  pyproject.toml
Graph/Types/: __init__.py
Graph/src/: __init__.py
Graph/src/Loader/: Loader.py  __init__.py
Graph/src/Types/: Doc.py  Form.py
Graph/src/maxdmg_resource/: __init__.py
Graph/src/maxdmg_resource.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Graph/src/maxdmg_resource/Types/: State.py  Transition.py
Portal/app/: __init__.py  routes.py
TGF/: __init__.py  bot.py
TGF/Config/: Config.py  __init__.py
TGF/Factories/: DocumentFactory.py  FormFactory.py  __init__.py
(+35 files in other folders)
